--- a/index.html
+++ b/index.html
@@ -89,5 +89,24 @@
 
   <!-- JS -->
   <script src="main.js"></script>
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.net.min.js"></script>
+<script>
+  VANTA.NET({
+    el: ".hero",
+    mouseControls: true,
+    touchControls: true,
+   
+    minWidth: 200.00,
+    scale: 1.0,
+    scaleMobile: 1.0,
+    color: 0x6a11cb,
+    backgroundColor: 0x0a0a23,
+    points: 14.0,
+    maxDistance: 22.0,
+    spacing: 18.0
+  })
+</script>
 </body>
 </html>
